# LuaGlue

./: CMakeLists.txt  README.md
.github/workflows/: install.yml  standalone.yml  style.yml  ubuntu.yml
cmake/: CPM.cmake  get_lua.cmake
include/glue/lua/: state.h
source/: state.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: example.cpp  state.cpp  test.lua
